Fix issue with rounded double border.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -316,6 +316,10 @@ body {
   position: relative;
 }
 
+.round {
+  border-radius: 20px;
+}
+
 main {
   display: grid;
   grid-auto-flow: column;
@@ -327,9 +331,10 @@ main {
   height: 85%;
   width: 85%;
   min-width: 20rem;
-  overflow: hidden;
   border-radius: 20px;
-  border: 4px solid rgba(255, 255, 255, 0.849);
+  border: 4px solid black;
+  outline: 3px solid rgba(255, 255, 255, 0.849);
+  overflow: hidden;
 }
 @media (orientation: portrait) {
   main {
