--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -4,7 +4,9 @@ body {
   background-color: black;
   position: relative;
 }
-
+.round {
+  border-radius: 20px;
+}
 main {
   display: grid;
   grid-auto-flow: column;
@@ -16,9 +18,10 @@ main {
   height: 85%;
   width: 85%;
   min-width: 20rem;
-  overflow: hidden;
   border-radius: 20px;
-  border: 4px solid rgba(255, 255, 255, 0.849);
+  border: 4px solid black;
+  outline: 3px solid rgba(255, 255, 255, 0.849);
+  overflow: hidden;
   @media (orientation: portrait) {
     grid-auto-flow: row;
     grid-template-columns: 1fr;
